// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A snapshot of a populated cell 1`] = `
<View
  collapsable={false}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
>
  <View
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 20.59332591861535,
            "flexDirection": "row",
            "height": 66.6414139375354,
            "justifyContent": "center",
            "width": 66.6414139375354,
          },
          Object {
            "backgroundColor": "#fefefe",
            "borderColor": "#555",
            "borderWidth": 1.8569274949157213,
            "elevation": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#555",
              "display": "flex",
              "fontSize": 33.3207069687677,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "bottom": 12.727381050152355,
              "color": "#555",
              "display": "flex",
              "fontSize": 20.59332591861535,
              "left": 12.727381050152355,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an active cell 1`] = `
<View
  collapsable={false}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
>
  <View
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 20.59332591861535,
            "flexDirection": "row",
            "height": 66.6414139375354,
            "justifyContent": "center",
            "width": 66.6414139375354,
          },
          Object {
            "backgroundColor": "#4285f4",
            "borderColor": "black",
            "borderWidth": 1.8569274949157213,
            "elevation": 3.004508686773637,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#fefefe",
              "display": "flex",
              "fontSize": 33.3207069687677,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "bottom": 12.727381050152355,
              "color": "#fefefe",
              "display": "flex",
              "fontSize": 20.59332591861535,
              "left": 12.727381050152355,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an empty cell 1`] = `
<View
  accessible={false}
  style={
    Object {
      "alignItems": "center",
      "borderRadius": 20.59332591861535,
      "flexDirection": "row",
      "height": 66.6414139375354,
      "justifyContent": "center",
      "width": 66.6414139375354,
    }
  }
/>
`;

exports[`A snapshot of an inactive cell in Explore mode 1`] = `
<View
  collapsable={false}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
>
  <View
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 20.59332591861535,
            "flexDirection": "row",
            "height": 66.6414139375354,
            "justifyContent": "center",
            "width": 66.6414139375354,
          },
          Object {
            "backgroundColor": "#fefefe",
            "borderColor": "#555",
            "borderWidth": 1.8569274949157213,
            "elevation": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#555",
              "display": "flex",
              "fontSize": 33.3207069687677,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "bottom": 12.727381050152355,
              "color": "#555",
              "display": "flex",
              "fontSize": 20.59332591861535,
              "left": 12.727381050152355,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`A snapshot of an inactive cell in Quiz mode 1`] = `
<View
  collapsable={false}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
>
  <View
    style={
      Array [
        Object {
          "transform": Array [
            Object {
              "scale": undefined,
            },
          ],
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderRadius": 20.59332591861535,
            "flexDirection": "row",
            "height": 66.6414139375354,
            "justifyContent": "center",
            "width": 66.6414139375354,
          },
          Object {
            "backgroundColor": "#fefefe",
            "borderColor": "#555",
            "borderWidth": 1.8569274949157213,
            "elevation": 0,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#555",
              "display": "none",
              "fontSize": 33.3207069687677,
            }
          }
        >
          5
        </Text>
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "bottom": 0,
            "justifyContent": "center",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <Text
          style={
            Object {
              "bottom": 12.727381050152355,
              "color": "#555",
              "display": "none",
              "fontSize": 20.59332591861535,
              "left": 12.727381050152355,
            }
          }
        >
          
        </Text>
      </View>
    </View>
  </View>
</View>
`;
